--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -12,17 +12,17 @@
         Title="Please find a better name"
         Padding="10">
     <Window.Resources>
-        <Models:WidthConverterSingle x:Key="Valueconverter" ></Models:WidthConverterSingle>
-        <Models:FillerTextBlockWidthConverterMulti x:Key="WidthConverterMulti"></Models:FillerTextBlockWidthConverterMulti>
-        <Models:TreeViewItemColourConverter x:Key="TreeViewItemColourConverter"></Models:TreeViewItemColourConverter>
+        <Models:WidthConverterSingle x:Key="Valueconverter" />
+        <Models:FillerTextBlockWidthConverterMulti x:Key="WidthConverterMulti" />
+        <Models:TreeViewItemColourConverter x:Key="TreeViewItemColourConverter" />
     </Window.Resources>
 
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
         <!--Left side panel-->
@@ -32,86 +32,95 @@
             <TextBox Name="NameTextBox"></TextBox>
             <TextBlock Name="MessageLabel"></TextBlock>        
             -->
-            
-            <TextBox Name="TextBox1" IsReadOnly="True" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap">
+
+            <TextBox Name="TextBox1" IsReadOnly="True" Width="{Binding  Width,ElementName=ButtonControlSp}"
+                     TextWrapping="Wrap">
                 The user may not modify the contents of this TextBox.
             </TextBox>
-            
+
             <Button Name="Button1" Click="Button1_Click">Button1</Button>
             <Button Name="Button2" Click="Button2_Click">Print keyring info</Button>
             <Button Name="Button3" Click="Button3_Click">Export keyring</Button>
             <Button Name="Button4" Click="Button4_Click">Import keyring</Button>
-            
+
             <TextBlock>Enter IP address of MediaWiki server</TextBlock>
-            <TextBox Name="TextBoxIp" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding IP}">
-            </TextBox>
+            <TextBox Name="TextBoxIp" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                     Text="{Binding IP}" />
             <Button Name="ButtonIp" Click="ButtonIP_Click">Change</Button>
 
             <TextBlock>Login to MediaWiki</TextBlock>
-            <TextBox Name="TextBoxUser" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding Username}" Watermark="Username">
-            </TextBox>
-            <TextBox Name="TextBoxPass" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding Password}" Watermark="Password">
-            </TextBox>
+            <TextBox Name="TextBoxUser" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                     Text="{Binding Username}" Watermark="Username" />
+            <TextBox Name="TextBoxPass" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                     Text="{Binding Password}" Watermark="Password" />
             <Button Name="ButtonLogin" Click="ButtonLogin_Click">Login</Button>
-            
+
             <!-- <TextBlock>Send keyring</TextBlock> -->
             <!-- -->
             <!-- <TextBox Name="TextBoxMail" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding MailRecipient}" Watermark="Email recipient"> -->
             <!-- </TextBox> -->
             <!-- <Button Name="MailButton" Click="ButtonMail">Login</Button> -->
-            
+
 
         </StackPanel>
-        
+
 
         <!--TreeView-->
-        <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Name="ScrollViewerTreeView">
+        <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto"
+                      Name="ScrollViewerTreeView">
             <StackPanel Orientation="Vertical">
                 <TreeView Items="{Binding rootKeyringCollection, Mode=TwoWay}" Name="TreeView1">
                     <TreeView.DataTemplates>
                         <TreeDataTemplate DataType="Models:RootKeyring" ItemsSource="{Binding combinedList}">
                             <StackPanel Orientation="Horizontal">
                                 <!--IsChecked CheckBox-->
-                                <CheckBox IsChecked="{Binding IsChecked}" MinWidth="20" Name="CheckBox" Initialized="CheckBox_OnInitialized">
-                                </CheckBox>
+                                <CheckBox IsChecked="{Binding IsChecked}" MinWidth="20" Name="CheckBox"
+                                          Initialized="CheckBox_OnInitialized" />
                                 <!--IsCheckedWrite CheckBox-->
-                                <CheckBox IsChecked="{Binding IsCheckedWrite}" MinWidth="20" Name="CheckBoxWrite" IsEnabled="{Binding IsCheckedWriteEnabled}">
-                                </CheckBox>
+                                <CheckBox IsChecked="{Binding IsCheckedWrite}" MinWidth="20" Name="CheckBoxWrite"
+                                          IsEnabled="{Binding IsCheckedWriteEnabled}" />
                                 <!--Folder-->
                                 <Border BorderBrush="{x:Null}" Height="{Binding Height, ElementName=CheckBox}">
-                                    <TextBlock Foreground="Red" VerticalAlignment="Center" Text="{Binding Name, Mode=TwoWay}"></TextBlock>
+                                    <TextBlock Foreground="Red" VerticalAlignment="Center"
+                                               Text="{Binding Name, Mode=TwoWay}" />
                                 </Border>
                             </StackPanel>
                         </TreeDataTemplate>
                         <TreeDataTemplate DataType="Models:KeyringEntry" ItemsSource="{Binding combinedList}">
                             <StackPanel Orientation="Horizontal">
                                 <!--IsChecked CheckBox-->
-                                <CheckBox IsChecked="{Binding IsChecked}" MinWidth="20" Name="CheckBox" Initialized="CheckBox_OnInitialized">
-                                </CheckBox>
+                                <CheckBox IsChecked="{Binding IsChecked}" MinWidth="20" Name="CheckBox"
+                                          Initialized="CheckBox_OnInitialized" />
                                 <!--IsCheckedWrite CheckBox-->
-                                <CheckBox IsChecked="{Binding IsCheckedWrite}" MinWidth="20" Name="CheckBoxWrite" IsEnabled="{Binding IsCheckedWriteEnabled}">
-                                </CheckBox>
+                                <CheckBox IsChecked="{Binding IsCheckedWrite}" MinWidth="20" Name="CheckBoxWrite"
+                                          IsEnabled="{Binding IsCheckedWriteEnabled}" />
                                 <!--Folder-->
                                 <Border BorderBrush="{x:Null}" Height="{Binding Height, ElementName=CheckBox}">
-                                    <TextBlock VerticalAlignment="Center" Text="{Binding Name}"></TextBlock>
+                                    <TextBlock VerticalAlignment="Center" Text="{Binding Name}" />
                                 </Border>
                             </StackPanel>
                         </TreeDataTemplate>
-                        <DataTemplate DataType="Models:DataFileEntry" >
-                            <DockPanel LastChildFill="False" Name="DockPanel_DataFileEntry" MaxWidth="{Binding Bounds.Width, ElementName=ScrollViewerTreeView}" > 
+                        <DataTemplate DataType="Models:DataFileEntry">
+                            <DockPanel LastChildFill="False" Name="DockPanel_DataFileEntry"
+                                       MaxWidth="{Binding Bounds.Width, ElementName=ScrollViewerTreeView}">
                                 <!--IsChecked CheckBox-->
-                                <CheckBox IsChecked="{Binding IsChecked}" DockPanel.Dock="Left" MinWidth="20" Name="CheckBox" Initialized="CheckBox_OnInitialized">
-                                </CheckBox>
+                                <CheckBox IsChecked="{Binding IsChecked}" DockPanel.Dock="Left" MinWidth="20"
+                                          Name="CheckBox" Initialized="CheckBox_OnInitialized" />
                                 <!--IsCheckedWrite CheckBox-->
-                                <CheckBox IsChecked="{Binding IsCheckedWrite}" DockPanel.Dock="Left" MinWidth="20" Name="CheckBoxWrite" IsEnabled="{Binding IsCheckedWriteEnabled}">
-                                </CheckBox>
-                                <DockPanel DockPanel.Dock="Left" Background="{Binding newestRevisionSelected, Converter={StaticResource TreeViewItemColourConverter}}">
+                                <CheckBox IsChecked="{Binding IsCheckedWrite}" DockPanel.Dock="Left" MinWidth="20"
+                                          Name="CheckBoxWrite" IsEnabled="{Binding IsCheckedWriteEnabled}" />
+                                <DockPanel DockPanel.Dock="Left"
+                                           Background="{Binding newestRevisionSelected, Converter={StaticResource TreeViewItemColourConverter}}">
                                     <!--DataFile -->
-                                    <TextBlock Foreground="Blue" Name="TextBlockDataFileEntry" VerticalAlignment="Center" PointerPressed="InputElement_OnPointerPressed" Text="{Binding filename}" ></TextBlock>
+                                    <TextBlock Foreground="Blue" Name="TextBlockDataFileEntry"
+                                               VerticalAlignment="Center"
+                                               PointerPressed="InputElement_OnPointerPressed" Text="{Binding filename}" />
                                     <!-- This is stupid, but it works decently. -->
-                                    <TextBlock Foreground="Blue" Name="TextBlockFillDataFileEntry" VerticalAlignment="Center" PointerPressed="InputElement_OnPointerPressed" 
+                                    <TextBlock Foreground="Blue" Name="TextBlockFillDataFileEntry"
+                                               VerticalAlignment="Center"
+                                               PointerPressed="InputElement_OnPointerPressed"
                                                Text="                                                                                     
-                                                                                                                             " >
+                                                                                                                             ">
                                         <TextBlock.Width>
                                             <MultiBinding Converter="{StaticResource WidthConverterMulti}">
                                                 <Binding Path="Bounds.Width" ElementName="ScrollViewerTreeView" />
@@ -130,38 +139,49 @@
                 </TreeView>
             </StackPanel>
         </ScrollViewer>
-        
+
         <!--Right side panel-->
         <DockPanel Grid.Column="2">
-            <ContentControl Content="{Binding selectedFile, Mode=TwoWay}" Width="300" DockPanel.Dock="Top" IsVisible="{Binding revisions, Converter={x:Static ObjectConverters.IsNotNull}}">
+            <ContentControl Content="{Binding selectedFile, Mode=TwoWay}" Width="300" DockPanel.Dock="Top"
+                            IsVisible="{Binding revisions, Converter={x:Static ObjectConverters.IsNotNull}}">
                 <ContentControl.ContentTemplate>
                     <DataTemplate DataType="Models:DataFileEntry">
                         <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto">
                             <TextBlock Grid.Row="0" Grid.Column="0">Filename: </TextBlock>
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding filename}"/>
+                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding filename}" />
                         </Grid>
                     </DataTemplate>
                 </ContentControl.ContentTemplate>
             </ContentControl>
-            
-            <TextBlock Text="Revoke access to file" DockPanel.Dock="Top" IsVisible="{Binding selectedFile, Converter={x:Static ObjectConverters.IsNotNull}}"/>
-            <Button Name="RevokeAccessButton" DockPanel.Dock="Top" IsVisible="{Binding selectedFile, Converter={x:Static ObjectConverters.IsNotNull}}" Width="100" Height="30" Click="Show_Click">Revoke</Button>
-            <Border IsVisible="{Binding IsAccessRevocationPopupOpen}" Background="#40000000">
-                <Popup Name="RevokeAccessPopup" PlacementTarget="RevokeAccessButton">
+
+            <TextBlock Text="Revoke access to file" DockPanel.Dock="Top"
+                       IsVisible="{Binding selectedFile, Converter={x:Static ObjectConverters.IsNotNull}}" />
+            <Button Name="RevokeAccessButton" DockPanel.Dock="Top"
+                    IsVisible="{Binding selectedFile, Converter={x:Static ObjectConverters.IsNotNull}}" Width="100"
+                    Height="30" Click="Show_Click">
+                Revoke
+            </Button>
+
+            <Popup Name="RevokeAccessPopup" PlacementTarget="RevokeAccessButton">
+                <Border IsVisible="{Binding IsAccessRevocationPopupOpen}" BorderBrush="Black" BorderThickness="1,1,1,1">
                     <Grid>
                         <TextBlock Name="AccessRevocationText" Background="White"
-                            Text="Are you that you want to revoke access to the file?&#x0a; This action cannot be undone.">
-                        </TextBlock>
-                        <Button Click="Hide_Click" Margin="80">Hide</Button>
+                                   Text="Are you that you want to revoke access to the file?&#x0a; This action cannot be undone."
+                                   TextAlignment="Center" />
+                        <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto">
+                            <Button Grid.Column="0" Click="Hide_Click" Margin="30,80,10,10">Cancel</Button>
+                            <Button Grid.Column="1" Click="Revoke_Click" Margin="150,80,30,10" Background="LightBlue">Confirm</Button>
+                        </Grid>
                     </Grid>
-                </Popup>
-            </Border>
-                
+                </Border>
+            </Popup>
+
+
             <!-- <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto"> -->
             <!--     <TextBlock Grid.Row="0" Grid.Column="0" Text="Selected RevisionID: "></TextBlock> -->
             <!--     <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding filename}"/> -->
             <!-- </Grid> -->
-                
+
             <!-- <TextBlock Width="300" TextWrapping="Wrap" Text="The MediaWiki server does not contain any revisions for the selected file"> -->
             <!--     <TextBlock.IsVisible> -->
             <!--         <MultiBinding Converter="{x:Static BoolConverters.And}"> -->
@@ -172,23 +192,29 @@
             <!--         </MultiBinding> -->
             <!--     </TextBlock.IsVisible> -->
             <!-- </TextBlock> -->
-            
-            <TextBlock Text="Select revision to open" DockPanel.Dock="Top" IsVisible="{Binding selectedRevision, Converter={x:Static ObjectConverters.IsNotNull}}"/>
-            <Button Name="SelectedRevisionButton" DockPanel.Dock="Top" IsVisible="{Binding selectedRevision, Converter={x:Static ObjectConverters.IsNotNull}}" Click="SelectedRevisionButton_OnClick">Select</Button>
+
+            <TextBlock Text="Select revision to open" DockPanel.Dock="Top"
+                       IsVisible="{Binding selectedRevision, Converter={x:Static ObjectConverters.IsNotNull}}" />
+            <Button Name="SelectedRevisionButton" DockPanel.Dock="Top"
+                    IsVisible="{Binding selectedRevision, Converter={x:Static ObjectConverters.IsNotNull}}"
+                    Click="SelectedRevisionButton_OnClick">
+                Select
+            </Button>
             <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                 <StackPanel>
-                    <ListBox Items="{Binding revisions, Mode=TwoWay}" SelectionMode="Single" SelectedItem="{Binding selectedRevision}" Width="300">
+                    <ListBox Items="{Binding revisions, Mode=TwoWay}" SelectionMode="Single"
+                             SelectedItem="{Binding selectedRevision}" Width="300">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto, Auto, Auto">
                                     <TextBlock Grid.Row="0" Grid.Column="0">revisionID: </TextBlock>
-                                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding revisionID}"/>
+                                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding revisionID}" />
                                     <TextBlock Grid.Row="1" Grid.Column="0">owner: </TextBlock>
-                                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding user}"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding user}" />
                                     <TextBlock Grid.Row="2" Grid.Column="0">time: </TextBlock>
-                                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding timestamp}"/>
+                                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding timestamp}" />
                                     <TextBlock Grid.Row="3" Grid.Column="0">size: </TextBlock>
-                                    <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding size}"/>
+                                    <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding size}" />
                                 </Grid>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
@@ -197,5 +223,5 @@
             </ScrollViewer>
         </DockPanel>
     </Grid>
-    
+
 </Window>
